# PYWEB-HW07-2

./: CRUD_CLI.py  README.md  config.ini  pyproject.toml  seed.py
conf/: db.py  models2.py
migrations/: env.py
migrations/versions/: 4e045f049e53_part2.py
seeds/: seed.py
